...
            "state": "translated",
            "value": "Abschreibunga"
          }
        }
      }
    },
    "Add": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Hinzufügen"
          }
...
            "state": "translated",
            "value": "Kamera- & Produktionszeich"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Abbrechen"
          }
...
            "state": "translated",
            "value": "ERFOLGSRECHNUNG"
          }
        }
      }
    },
    "Edit": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Bearbeiten"
          }
...
            "state": "translated",
            "value": "Ertrach"
          }
        }
      }
    },
    "Save": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Speichern"
          }
...
            "state": "translated",
            "value": "Details vom Eintrach"
          }
        }
      }
    },
    "Transactions": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Transaktionen"
          }
...
            "state": "translated",
            "value": "Unbekannts Zeich"
          }
        }
      }
    },
    "Update": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Aktualisieren"
          }
...
